<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_8"
    android:layout_gravity="center"
    tools:viewBindingIgnore="true"
    style="@style/CardStyle">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/rowLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aqi_bg">

    <TextView
        android:id="@+id/tv_city"
        style="@style/TableRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/city"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_cur_aqi"/>

    <TextView
        android:id="@+id/tv_cur_aqi"
        style="@style/TableRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/current_aqi"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tv_city"
        app:layout_constraintEnd_toStartOf="@+id/tv_last_updt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_last_updt"
        style="@style/TableRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/last_updated"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cur_aqi"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>